@@ -26,8 +26,8 @@ data:extend({
   {
     type = "technology",
     name = "pm-stainless-steel-processing",
-    icon_size = 256,
-    icon = "__periodic-madness__/graphics/technology/stainless-steel-unlock.png",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/plates/stainless-steel-plate.png",
     effects =
     {
       PM.unlock_recipe("pm-stainless-steel-alloy"),
