@@ -95,6 +95,7 @@ Date: 2024-08-09
     - Rebalanced module tiers 1-2 technology cost to be closer in line with tier 3's.
     - Revamped shotguns slightly to make them more useful and predictable?
     - Buffed Chromium based stainless steel to give 6 plates instead of 5.
+    - Changed stainless steel processings technology icon to follow the same theme as steel processing.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
